# call-me-maybe

./: Makefile  pyproject.toml
data/input/: function_calling_tests.json  functions_definition.json
data/output/: function_calling_results.json
src/: __main__.py  call_me_maybe.py  merge_rules.txt  tokeniser.py  tui.py  validation_classes.py
