[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.6",
    "pydantic>=2.13.4",
    "textual>=8.2.7",
    "torch>=2.12.0",
    "transformers>=5.10.2",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=2.1.0",
    "textual-dev>=1.8.0",
]
